--- a/src/pages/Landing/_Landing.scss
+++ b/src/pages/Landing/_Landing.scss
@@ -105,6 +105,7 @@ button {
   outline: none;
   width: 15rem;
   height: 1.5rem;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .submit-style {
