--- a/src/pages/Landing/_Landing.scss
+++ b/src/pages/Landing/_Landing.scss
@@ -2,7 +2,7 @@ $primary-color: #71ff7f;
 $secondary-color: #2044c5;
 $primary-font: "Yu Gothic";
 @import url("https://www.fonts.com/font/jiyu-kobo/yu-gothic?QueryFontType=Web&src=GoogleWebFonts");
-@mixin show_border($clr: black, $on: false) {
+@mixin show_border($clr: black, $on: true) {
   @if $on == true {
     border: 2px solid $clr;
   }
@@ -65,6 +65,8 @@ button {
   font-size: 1rem;
   margin-right: 1.5rem;
   font-weight: bold;
+  text-decoration: none;
+  color: black;
 }
 
 .sign-in:hover {
