--- a/src/pages/_variables.scss
+++ b/src/pages/_variables.scss
@@ -2,7 +2,7 @@ $primary-color: #71ff7f;
 $secondary-color: #2044c5;
 $primary-font: "Yu Gothic";
 @import url("https://www.fonts.com/font/jiyu-kobo/yu-gothic?QueryFontType=Web&src=GoogleWebFonts");
-@mixin show_border($clr: black, $on: true) {
+@mixin show_border($clr: black, $on: false) {
   @if $on == true {
     border: 2px solid $clr;
   }
