--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -48,3 +48,76 @@
 .notes-section {
   text-align: center;
 }
+
+// ////////////////////////////
+/* The Modal (background) */
+.modal {
+  display: flex; /* Hidden by default CHANGE BACK TO NONE*/
+  align-items: center;
+  justify-content: center;
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0, 0, 0); /* Fallback color */
+  background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-end;
+  // justify-content: ;
+  background-color: $primary-color;
+  // margin: 15% auto; /* 15% from the top and centered */
+  // padding: 20px;
+  border: 1px solid #888;
+  border-radius: 13px;
+  width: 25rem; /* Could be more or less, depending on screen size */
+  height: 25rem;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal-content > textarea {
+  padding: 10px;
+  border-radius: 13px;
+  align-self: stretch;
+  height: 70%;
+  margin: 20px;
+  outline: none;
+  resize: none;
+}
+
+.add-task-button {
+  background-color: #fff;
+  margin: 7px;
+  cursor: pointer;
+  border-radius: 10px;
+  width: 5rem;
+  height: 2rem;
+  font-weight: bold;
+  // object-fit: contain;
+}
+
+.add-task-button:hover {
+  background-color: #eee;
+}
