--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -52,7 +52,7 @@
 // ////////////////////////////
 /* The Modal (background) */
 .modal {
-  display: flex; /* Hidden by default CHANGE BACK TO NONE*/
+  display: none; /* Hidden by default CHANGE BACK TO NONE*/
   align-items: center;
   justify-content: center;
   position: fixed; /* Stay in place */
@@ -105,6 +105,7 @@
   margin: 20px;
   outline: none;
   resize: none;
+  border: 3px solid black;
 }
 
 .add-task-button {
