--- a/src/pages/Home/_Tasks.scss
+++ b/src/pages/Home/_Tasks.scss
@@ -27,3 +27,8 @@
   font-weight: bold;
   margin-bottom: 3rem;
 }
+
+.task-info-container:hover {
+  background-color: whitesmoke;
+  cursor: pointer;
+}
