Clicking the task will let you have its information. Needed to start deleteTask

--- a/src/pages/Home/_Home.scss
+++ b/src/pages/Home/_Home.scss
@@ -47,6 +47,8 @@
 
 .notes-section {
   text-align: center;
+  // margin
+  // pa
 }
 
 // ////////////////////////////
@@ -162,4 +164,11 @@
 .loading-icon {
   display: flex;
   justify-content: center;
+}
+
+.notes-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
