--- a/src/pages/Home/_Tasks.scss
+++ b/src/pages/Home/_Tasks.scss
@@ -12,6 +12,7 @@
   font-size: 24px;
   font-weight: bold;
   margin-bottom: 2.5rem;
+  white-space: pre-wrap;
   // height: auto;
   // background-color: black;
   // height: 10rem;
