--- a/src/pages/Login/_Login.scss
+++ b/src/pages/Login/_Login.scss
@@ -5,7 +5,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  @include show_border(red, false);
 }
 
 .title-text {
@@ -13,15 +12,13 @@
   color: $secondary-color;
   text-decoration: none;
   font-weight: bold;
-  //   border: 2px solid green;
 }
 
 .title-text:hover {
-  color: $secondary-color + #005;
+  color: #2044ca;
 }
 
 .form-container {
-  @include show_border(green, false);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
